# mmdetection

./: .gitignore  Makefile  pyproject.toml
src/: test.py
